<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FloorOne" Id="{c02cf3b7-43db-45f9-9ccd-8fbd2414f672}">
    <Declaration><![CDATA[TYPE ST_FloorOne :
STRUCT
	
	{attribute 'iot.NestedStructIcon' := 'Lightbulb'}
	{attribute 'iot.DisplayName' := 'Light Widgets'}
	stLights		: ST_Lighting;
	
	{attribute 'iot.NestedStructIcon' := 'Room'}
	{attribute 'iot.DisplayName' := 'Confrence Room'}
	stRoomOne		: ST_RoomOne;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>