<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FloorTwo" Id="{00ad9274-1ba4-48cf-996c-d84c3189a4f3}">
    <Declaration><![CDATA[TYPE ST_FloorTwo :
STRUCT
	
{attribute 'iot.NestedStructIcon' := 'Room'}
	{attribute 'iot.DisplayName' := 'Lunchroom'}
	stF2RoomOne		: ST_F2RoomOne;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>