<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Topic" Id="{855b808c-83ef-4d7d-90e8-63f663180320}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		stBuilding : ST_Building; 
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>